# shelf-wise

./: README.md  pyproject.toml
shelf_wise/: model.ipynb
shelf_wise/utils/: _validation.py  config.json
